--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,22 @@
     "eslint-plugin-react-refresh": "^0.4.4",
     "postcss": "^8.4.32",
     "tailwindcss": "^3.3.6",
-    "vite": "^5.0.0"
+    "vite": "^5.0.0",
+    "@react-oauth/google": "^0.11.1",
+    "@reduxjs/toolkit": "^1.9.6",
+    "axios": "^1.5.1",
+    "dotenv-webpack": "^8.0.1",
+    "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^3.1.2",
+    "react-file-base64": "^1.0.3",
+    "react-hot-toast": "^2.4.1",
+    "react-icons": "^4.11.0",
+    "react-id-generator": "^3.0.2",
+    "react-infinite-scroll-component": "^6.1.0",
+    "react-loader-spinner": "^5.4.5",
+    "react-redux": "^8.1.2",
+    "react-router-dom": "^6.16.0",
+    "react-scripts": "5.0.1",
+    "react-star-rate": "^0.2.0"
   }
 }
